# nexus-suite-app

./: Procfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
main/: models.py  random_quote.py  urls.py  views.py
main/templates/main/: random_quote.html
main/utils/: utils.py
newsapp/: translations.py  urls.py  views.py
newsapp/data/: cities_of_ukraine_with_final_locative_and_region.json
newsapp/static/newsapp/: style.css  styles.css
newsapp/static/newsapp/js/: timezone.js  weather.js
newsapp/templates/newsapp/: base.html  category_news.html  exchange_rates.html  index.html  weather.html
newsapp/templatetags/: custom_filters.py  custom_tags.py
newsapp/utils/: cities_of_ukraine.json  exceptions.py  exchanger_utils.py  location_utils.py  news_utils.py  translations.py  utils.py  weather_utils.py
nexus_suite/: asgi.py  settings.py  urls.py  wsgi.py
quotesapp/: admin.py  models.py  urls.py
users/: forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile_avatar_profile_first_name_profile_last_name.py  0003_profile_address_profile_bio_profile_date_of_birth_and_more.py  0004_alter_profile_gender.py  0005_profile_email.py
users/static/users/: styles.css
users/static/users/js/: file_choose.js  gender.js  password.js
users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  profile.html  signup.html
users/utils/: translations.py  utils.py  validators.py
