[tool.poetry]
name = "nexus-suite-app"
version = "0.1.0"
description = "NexusSuite combines news updates, weather forecasts, contacts, notes, and file management into a single, seamless application."
authors = ["Alex <alex.nuclearboy@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
gunicorn = "^22.0.0"
whitenoise = "^6.7.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
pytz = "^2024.1"
beautifulsoup4 = "^4.12.3"
opencage = "^2.4.0"
pycountry = "^24.6.1"
pyinflect = "^0.5.1"
spacy = "^3.7.5"
translate = "^3.6.1"
aiohttp = "^3.9.5"
aiofiles = "^24.1.0"
django-cloudinary-storage = "^0.3.0"
cloudinary = "^1.41.0"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
